# cliff-structlog-expt

./: .gitignore  README.md  setup.cfg
cliff_structlog_expt/: __init__.py  foo.py  main.py
envs/: environment-dev.yaml  requirements.txt
