[metadata]
name = cliff_structlog_expt
version = attr: cliff_structlog_expt.__version__
description = cliff and structlog Experiments Package
author = Doug Latornell
author_email = djl@douglatornell.ca
url=https://github.com/douglatornell/cliff_structlog_expt
long_description = file: README.md
platform = Linux
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Environment :: Console

[options]
zip_safe = False
include_package_date = True
packages = find:
python_requires = >=3.8
install_requires =
    ; see envs/environment-dev.yaml for conda dev environment installation
    ; see envs/requirements.txt for versions most recently used in development
    cliff
    structlog

[options.entry_points]
console_scripts =
    cliff-structlog-expt = cliff_structlog_expt.main:main

cliff_structlog_expt.app =
    foo = cliff_structlog_expt.foo:Foo
